bk_ida/gccida/g0/gen_split_1214
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_split_1214/src/insn-emit.c:16663:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)*( _WORD *)operand1, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_split_1214/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_split_1214/src/insn-emit.c:16663:12: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
( rtx_code)*( _WORD *)operand1, 
~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_split_1214/src/insn-emit.c:16664:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)operand1 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_split_1214/src/insn-emit.c:16672:17: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v6 = gen_rtx( ( rtx_code)*( _WORD *)operand1, ( machine_mode)*( ( unsigned __int8 *)operand1 + 2), v5, v4); 
                ^~~~~~~~
                rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_split_1214/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_split_1214/src/insn-emit.c:16672:26: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v6 = gen_rtx( ( rtx_code)*( _WORD *)operand1, ( machine_mode)*( ( unsigned __int8 *)operand1 + 2), v5, v4); 
              ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_split_1214/src/insn-emit.c:16672:49: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx( ( rtx_code)*( _WORD *)operand1, ( machine_mode)*( ( unsigned __int8 *)operand1 + 2), v5, v4); 
                                                ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_split_1214/src/obj/insn-emit.o] Error 1
